<resources>
    <string name="app_name">Bon appetit!</string>
    <string name="recipe_of_day_string">Рецепт дня</string>
    <string name="cooking_app_string">Bon appetit!</string>
    <string name="time_card_string">30 мин.</string>
    <string name="kkal_card_string">250 kkal.</string>
    <string name="recipe_card_title_string">Черничные маффины</string>
    <string name="recipes_string">Рецепты</string>
    <string name="profile_string">Профиль</string>
    <string name="favourites_string">Избранное</string>
    <string name="recipes_book_string">Книга рецептов</string>
    <string name="new_recipes__string">Новинки</string>
    <string name="next_string">Продолжить</string>
    <string name="have_account_string">Уже есть аккаунт?</string>
    <string name="autorization_link_string">Авторизоваться</string>
    <string name="password_string">Пароль</string>
    <string name="email_string">Email</string>
    <string name="registration_title_string">Регистрация</string>
    <string name="autorization_string">Авторизация</string>
    <string name="enter_button">Войти</string>
    <string name="your_data_string">Ваши данные</string>
    <string name="surname_string">Фамилия</string>
    <string name="name_string">Имя</string>
    <string name="patronymic_string">Отчество (при наличии)</string>
    <string name="phone_number_string">Номер телефона</string>
    <string name="user_photo_string">Фото пользователя</string>
    <string name="choose_photo_string">Выбрать фото</string>
    <string name="register_string">Зарегестрироваться</string>
    <string name="commit_changes_string">Сохранить изменения</string>
    <string name="surname_user_string">Файзутдинова</string>
    <string name="name_user_string">Екатерина</string>
    <string name="patronymic_user_string">Романовна</string>
    <string name="phone_user_string">+7(999)999-99-99</string>
    <string name="categories_string">Категории</string>
    <string name="category_title_string">Завтрак</string>
    <string name="search_by_title_string">Поиск по названию</string>
    <string name="recipe_string">Рецепт</string>
    <string name="recipe_title_string">Пельмешки</string>
    <string name="callories_count_string">250 kkal.</string>
    <string name="time_count_string">30 мин.</string>
    <string name="complexity_string">Сложный</string>
    <string name="recipe_description_string">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, ex provident? Beatae sint quaerat nobis iure exercitationem sequi repudiandae dolor esse. Magnam aliquam dignissimos, provident nemo illum tempora ea odit!</string>
    <string name="ingredients_string">Ингредиенты</string>
    <string name="ingredient_title_string">Готовые пельмени</string>
    <string name="ingredient_count_string">1 пачка</string>
    <string name="instructions_string">Инструкции</string>
    <string name="instruction_number_string">1</string>
    <string name="instruction_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, ex provident? Beatae sint quaerat nobis iure exercitationem sequi repudiandae dolor esse. Magnam aliquam dignissimos, provident nemo illum tempora ea odit!</string>
    <string name="add_recipe_string">Добавить рецепт</string>
    <string name="title_string">Название</string>
    <string name="small_description_string">Краткое описание</string>
    <string name="callories_count_input_string">Калорийность</string>
    <string name="time_of_cooking_string">Время готовки</string>
    <string name="title_of_ingredient_string">Название ингредиента</string>
    <string name="count_string">Количество</string>
    <string name="enter_instruction_string">Введите инструкцию</string>
    <string name="photo_string">Фото</string>
    <string name="upload_image_string">Загрузить изображение</string>
    <string name="complexity_of_cooking_string">Сложность готовки</string>
    <string name="registration_link_on_authorization_screen">Зарегестрироваться</string>
    <string name="have_not_account_string">Нет аккаунта?</string>
    <string-array name="callories_array">
        <item>0-50 kcal.</item>
        <item>50-100 kcal.</item>
        <item>100-200 kcal.</item>
        <item>200-300 kcal.</item>
        <item>300-500 kcal.</item>
        <item>500-700 kcal.</item>
        <item>700+ kcal.</item>
    </string-array>
    <string-array name="times_array">
        <item>1 - 5 мин.</item>
        <item>5 - 15 мин.</item>
        <item>15 - 30 мин.</item>
        <item>30 - 60 мин.</item>
        <item>60 - 90 мин.</item>
        <item>90+ мин.</item>
    </string-array>
    <string-array name="complexity_array">
        <item>Легкий</item>
        <item>Средний</item>
        <item>Сложный</item>
    </string-array>
</resources>