<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#F64203"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/cooking_app_string"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <LinearLayout
        android:id="@+id/main_block"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:background="#FFF8F8"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/autorization_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/autorization_string"
            android:textAlignment="center"
            android:textColor="#530302"
            android:textSize="36sp" />

        <LinearLayout
            android:id="@+id/autorization_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="36dp"
            android:orientation="vertical"
            android:paddingLeft="32dp"
            android:paddingTop="16dp"
            android:paddingRight="32dp">

            <TextView
                android:id="@+id/error_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#E23C3C"
                android:textSize="21sp" />

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:autofillHints=""
                android:background="@drawable/rounded_corner_view"
                android:drawableStart="@drawable/email_input_icon"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/email_string"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="21sp" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@drawable/rounded_corner_view"
                android:drawableStart="@drawable/password_input_icon"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/password_string"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="21sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/autorization_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/rounded_corner_view_button"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:text="@string/enter_button"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#FDFDFD"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>