<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/recipe_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#F68660"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:id="@+id/recipe_card_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/recipe_card_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/recipe_card_title_string"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/maffin_card_photo" />

            <TextView
                android:id="@+id/recipe_card_title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#717171"
                android:padding="4dp"
                android:paddingStart="6dp"
                android:text="@string/recipe_card_title_string"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                />

            <LinearLayout
                android:id="@+id/recipe_card_information_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/callories_card_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:paddingStart="6dp"
                    android:text="@string/kkal_card_string"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/time_card_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:text="@string/time_card_string"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>