<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#F64203"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/app_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/cooking_app_string"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="70dp"
        android:background="#FFF8F8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/main_block"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="32dp"
            android:background="#FFF8F8"
            android:orientation="vertical">

            <TextView
                android:id="@+id/new_recipe_title_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/add_recipe_string"
                android:textColor="#530302"
                android:textSize="28sp" />

            <LinearLayout
                android:id="@+id/new_recipe_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/title_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/rounded_corner_view"
                    android:drawableStart="@drawable/fio_icon"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:hint="@string/title_string"
                    android:inputType="text"
                    android:padding="12dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF" />

                <EditText
                    android:id="@+id/description_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/rounded_corner_view"
                    android:drawableStart="@drawable/fio_icon"
                    android:drawablePadding="12dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/small_description_string"
                    android:inputType="textMultiLine"
                    android:padding="12dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF" />

                <LinearLayout
                    android:id="@+id/callories_input_block"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/callories_help_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:text="@string/callories_count_input_string"
                        android:textColor="#530302"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/callories_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_corner_view"
                        android:dropDownWidth="match_parent"
                        android:minHeight="48dp"
                        android:padding="12dp"
                        android:popupBackground="@drawable/rounded_corner_view"
                        android:spinnerMode="dropdown"
                        android:textColor="#000000" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/time_input_block"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/time_help_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:text="@string/time_of_cooking_string"
                        android:textColor="#530302"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/time_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_corner_view"
                        android:dropDownWidth="match_parent"
                        android:minHeight="48dp"
                        android:padding="12dp"
                        android:popupBackground="@drawable/rounded_corner_view"
                        android:spinnerMode="dropdown"
                        android:textColor="#000000" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#F64203"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/bottom_bar_buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/book_of_recipes_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/book_of_recipes_image"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/recipes_book_string"
                    app:srcCompat="@drawable/book_of_recipes_icon" />

                <TextView
                    android:id="@+id/book_of_recipes_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:text="@string/recipes_book_string"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/recipes_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/recipes_image"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/recipes_string"
                    app:srcCompat="@drawable/recipes_icon" />

                <TextView
                    android:id="@+id/recipes_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:text="@string/recipes_string"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/profile_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/profile_string"
                    app:srcCompat="@drawable/profile_icon" />

                <TextView
                    android:id="@+id/profile_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:text="@string/profile_string"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/favourites_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/favourites_image"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/favourites_string"
                    app:srcCompat="@drawable/star_icon" />

                <TextView
                    android:id="@+id/favourites_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:text="@string/favourites_string"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>